mule-user-guide/v/3.9/mule-maven-plugin.adoc
Maven的=  Mule插件
:keywords: mule, maven, plugin

`mule-maven-plugin`允许您将Mule应用程序部署到不同类型的服务器：独立（社区和企业），群集，Anypoint运行时管理器和CloudHub。它是使用Maven开发Mule应用程序框架的一部分，您可以在 link:/mule-user-guide/v/3.9/using-maven-with-mule[和Mule一起使用Maven]中找到它的概述。插件提供的最重要的功能是运行集成测试，并将应用程序部署到不同的环境。


该插件允许您：

* 将Mule应用程序部署到本地独立服务器
* 在本地独立部署中运行集成测试
* 将Mule应用程序部署到Anypoint Runtime Manager
* 将Mule应用程序部署到CloudHub
* 将Mule应用程序部署到本地群集

该插件支持社区版和企业版。

[TIP]
作为使用Maven插件将应用程序部署到运行时管理器的替代方案，您也可以使用 link:/runtime-manager/runtime-manager-api[运行时管理器API]。


== 先决条件

本文档假定您熟悉Maven，管理pom.xml文件以及使用Maven插件。 （如果您刚开始使用Maven，我们建议您关注Maven的 link:http://maven.apache.org/guides/getting-started/[入门教程]。）另外，本文档假定您熟悉在Maven中开发Mule应用程序。有关Mule和Maven的更多信息，请参阅 link:/mule-user-guide/v/3.9/using-maven-with-mule[和Mule一起使用Maven]。

[NOTE]
我们建议您将此插件更新至最新版本，因为从2.2.1版开始，其可用性得到极大改善

== 添加插件

=== 为插件添加Maven依赖项

编辑您的`settings.xml`或项目文件以包含以下内容：

[source, xml, linenums]
----
<plugin>
  <groupId>org.mule.tools.maven</groupId>
  <artifactId>mule-maven-plugin</artifactId>
  <version>2.2.1</version>
</plugin>
----

=== 添加Maven仓库

该插件的存储库位于https://repository.mulesoft.org/nexus/content/repositories/releases。要将其添加到Maven安装中，请编辑您的`settings.xml`或项目文件以包含以下内容：

[source, xml, linenums]
----
<pluginRepositories>
    <pluginRepository>
        <id>mule-public</id>
        <url>https://repository.mulesoft.org/nexus/content/repositories/releases</url>
    </pluginRepository>
</pluginRepositories>
----

=== 运行插件

要运行该插件，请使用系统的控制台导航到项目的根目录，然后键入：

[source,bash,linenums]
----
$ mvn org.mule.tools.maven:mule-maven-plugin:<goal>
----

== 一个简单的例子

在最简单的情况下，插件执行两项任务：

* 下载并安装Mule独立服务器
* 将Maven构建的结果部署到Mule服务器

注意：要使以下示例有效，您的`settings.xml`或`pom.xml`必须包含Mule可用的存储库。

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <version>2.2.1</version>
    <configuration>
        <deploymentType>standalone</deploymentType>
        <muleVersion>3.8.5</muleVersion>
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
        </execution>
    </executions>
</plugin>
----

然后运行：

[source,bash,linenums]
----
$ mvn org.mule.tools.maven:mule-maven-plugin:deploy
----

这个例子也触发了maven-deploy-plugin的默认部署目标。如果您不是作为构建的一部分部署到Maven存储库，则可以使用以下方法阻止插件执行：

[source, xml, linenums]
----
<plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-deploy-plugin</artifactId>
  <configuration>
    <skip>true</skip>
  </configuration>
</plugin>
----

== 部署到Anypoint Runtime Manager

您可以将应用程序部署到正在运行的Runtime Manager服务器，serverGroup或集群。您需要提供运行时管理器凭据并配置目标名称。

注意：在此配置中只允许平台用户。无法将SSO / Federated用户名作为用户名。

提示：有关示例中使用的参数的列表和说明，请参阅<<Full List of Parameters, below>>。

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <version>2.2.1</version>
    <configuration>
        <deploymentType>arm</deploymentType>
        <username>myUsername</username>
        <password>myPassword</password>
        <target>server-name</target>
        <!-- One of: server, serverGroup, cluster -->
        <targetType>server</targetType>
        <environment>Production</environment>
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
        </execution>
    </executions>
</plugin>
----

然后运行：

[source,bash,linenums]
----
$ mvn org.mule.tools.maven:mule-maven-plugin:deploy
----

有关所用参数的列表和说明，请参阅<<Runtime Manager>>。

== 部署到CloudHub

将您的应用程序部署到CloudHub：

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <version>2.2.1</version>
    <configuration>
        <deploymentType>cloudhub</deploymentType>
         <!-- muleVersion is the runtime version as it appears on the CloudHub interface -->
        <muleVersion>3.8.5</muleVersion>
        <username>myUsername</username>
        <password>myPassword</password>
        <redeploy>true</redeploy>
        <environment>Production</environment>
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
        </execution>
    </executions>
</plugin>
----

然后运行：

[source,bash,linenums]
----
$ mvn org.mule.tools.maven:mule-maven-plugin:deploy
----

有关所用参数的列表和说明，请参阅<<CloudHub>>。

=== 选择您的业务组

在CloudHub和Anypoint Runtime Manager部署中，您可以选择除根组织之外的业务组。在下面的示例中，将插件配置为部署到位于`engineering`业务组下的`devops`业务组。

层次结构中的业务组名称由反斜杠（\）分隔。如果您的业务组名称包含反斜杠，请使用前一个反斜杠进行转义。例如，要选择`\group1`下的`\group2`：`\group1\\group2`。

[source,xml, linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <configuration>
        <deploymentType>cloudhub</deploymentType>
        <muleVersion>${mule.version}</muleVersion>
        <username>${username}</username>
        <password>${password}</password>
        <applicationName>my-application</applicationName>
        <environment>Production</environment>
        <businessGroup>engineering\devops</businessGroup>
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
        </execution>
    </executions>
</plugin>
----

== 使用Mule服务器而不是下载Mule依赖项

通过配置`muleHome`属性，您可以将插件配置为部署到现有服务器，而不是下载和安装新的Mule服务器。

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <version>2.2.1</version>
    <configuration>
        <deploymentType>standalone</deploymentType>
        <muleHome>/path/to/mule/server</muleHome>
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
        </execution>
    </executions>
</plugin>
----

== 使用代理部署到Mule服务器

您还可以使用Mule代理提供的API将插件配置为部署到现有的Mule服务器。在下面显示的代码中，`uri`参数是代理的REST API的端点。

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <version>2.2.1</version>
    <configuration>
        <deploymentType>agent</deploymentType>
        <uri>http://localhost:9999/</uri>
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
        </execution>
    </executions>
</plugin>
----

然后运行：

[source,bash,linenums]
----
$ mvn org.mule.tools.maven:mule-maven-plugin:deploy
----

有关所用参数的列表和说明，请参阅<<Agent>>。

== 运行集成测试

插件最重要的用途之一是在集成应用程序上运行集成测试。检查`src/it/standalone/example-integration-tests`中的工作示例。

要运行集成测试，基本步骤如下：

* 配置`maven-mule-plugin`以Mule应用程序格式打包项目
* 配置`maven-failsafe-plugin`以运行集成测试和报告
* 配置`mule-maven-plugin`将项目的打包应用程序部署到从Maven存储库下载的新Mule服务器。

[source, xml, linenums]
----
<plugins>
    <plugin>
        <groupId>org.mule.tools.maven</groupId>
        <artifactId>mule-app-maven-plugin</artifactId>
        <version>2.2.1</version>
        <extensions>true</extensions>
    </plugin>
    <plugin>
        <groupId>org.mule.tools.maven</groupId>
        <artifactId>mule-maven-plugin</artifactId>
        <version>2.0</version>
        <configuration>
            <deploymentType>standalone</deploymentType>
            <muleVersion>3.8.5</muleVersion>
        </configuration>
        <executions>
            <execution>
                <id>deploy</id>
                <phase>pre-integration-test</phase>
                <goals>
                    <goal>deploy</goal>
                </goals>
            </execution>
            <execution>
                <id>undeploy</id>
                <phase>post-integration-test</phase>
                <goals>
                    <goal>undeploy</goal>
                </goals>
            </execution>
        </executions>
    </plugin>
    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
            <execution>
                <id>integration-test</id>
                <goals>
                    <goal>integration-test</goal>
                    <goal>verify</goal>
                </goals>
            </execution>
        </executions>
    </plugin>
</plugins>
----

== 完整示例

提示：有关示例中使用的参数的列表和说明，请参阅<<Full List of Parameters, below>>。

在本例中，插件被配置为独立部署，并执行以下任务：

* 配置一个应用程序进行部署
* 配置要添加到服务器的两个外部库
* 配置要部署的域
* 定义要在启动服务器之前运行的脚本

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <version>2.2.1</version>
    <configuration>
        <muleVersion>3.8.5</muleVersion>                 <1>
        <deploymentType>standalone</deploymentType>
        <applications>
            <application>${app.location}</application>   <2>
        </applications>
        <libs>
          <lib>${basedir}/activemq-all-5.5.0.jar</lib>
          <lib>${basedir}/activemq-core.jar</lib>        <3>
        </libs>
        <arguments>
            <argument>-M-Dport.1=1337</argument>
            <argument>-M-Dport.2=1338</argument>         <4>
        </arguments>
        <domain>${project.basedir}/domain</domain>       <5>
        <script>${basedir}/script.groovy</script>        <6>
        <community>false</community>                     <7>
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>pre-integration-test</phase>
            <goals>
                <goal>deploy</goal>                      <8>
            </goals>
        </execution>
        <execution>
            <id>undeploy</id>
            <phase>post-integration-test</phase>
            <goals>
                <goal>undeploy</goal>                    <9>
            </goals>
        </execution>
    </executions>
</plugin>
----
<1>配置Mule版本。
<2>这指向Mule应用程序可展开zip文件，或指向分解Mule应用程序文件夹。默认为构建生成的工件。
<3>将外部库添加到Mule Standalone。
<4> Mule参数（可选）。
<5>要部署的域。要将您的应用程序添加到域中，您必须手动配置您的应用程序（可选）。
<6>可选的Groovy脚本在部署之前运行。
<7>使用企业版。
<8>使用`deploy`目标下载Mule，安装它并部署域和应用程序。
<9>使用`undeploy`目标取消部署应用程序并停止Mule服务器。

跑

[source,bash,linenums]
----
$ mvn org.mule.tools.maven:mule-maven-plugin:deploy
----
部署应用程序。

然后你可以运行：

[source,bash,linenums]
----
$ mvn org.mule.tools.maven:mule-maven-plugin:undeploy
----
停止应用程序

有关所用参数的列表和说明，请参阅<<Standalone>>。

== 部署到本地Mule群集

提示：有关示例中使用的参数的列表和说明，请参阅<<Full List of Parameters, below>>。

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <version>2.2.1</version>
    <configuration>
        <muleVersion>3.8.5</muleVersion>
        <deploymentType>cluster</deploymentType>
        <size>2</size>                                      <1>
        <application>${app.1.location}</application>
        <libs>
          <lib>${basedir}/activemq-all-5.5.0.jar</lib>
          <lib>${basedir}/activemq-core.jar</lib>
        </libs>
        <arguments>
            <argument>-M-Dport.1=1337</argument>
            <argument>-M-Dport.2=1338</argument>
        </arguments>
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>pre-integration-test</phase>
            <goals>
                <goal>deploy</goal>                         <2>
            </goals>
        </execution>
        <execution>
            <id>undeploy</id>
            <phase>post-integration-test</phase>
            <goals>
                <goal>undeploy</goal>                       <3>
            </goals>
        </execution>
    </executions>
</plugin>
----

这个例子与最后一个例子类似，区别如下：

<1>指定用于创建群集的节点数量。该插件然后为您创建群集。
<2>要启动群集，您需要指定`clusterDeploy`目标。
<3>要停止群集，您需要指定`clusterStop`目标。

有关所用参数的列表和说明，请参阅<<Cluster>>。

== 部署多个应用程序

提示：有关示例中使用的参数的列表和说明，请参阅<<Full List of Parameters, below>>。

要部署多个应用程序，您需要为每个要部署的应用程序配置一个插件执行。

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <version>2.2.1</version>
    <configuration>
        <muleVersion>3.8.5</muleVersion>
        <deploymentType>standalone</deploymentType>
    </configuration>
    <executions>
        <execution>
            <id>deploy1</id>
            <phase>pre-integration-test</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
            <configuration>
                <application>${app.1.location}</application>
            </configuration>
        </execution>
        <execution>
            <id>deploy2</id>
            <phase>pre-integration-test</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
            <configuration>
                <application>${app.2.location}</application>
            </configuration>
        </execution>
        <execution>
            <id>undeploy1</id>
            <phase>post-integration-test</phase>
            <goals>
                <goal>undeploy</goal>
            </goals>
            <configuration>
                <application>${app.1.location}</application>
            </configuration>
        </execution>
        <execution>
            <id>undeploy2</id>
            <phase>post-integration-test</phase>
            <goals>
                <goal>undeploy</goal>
            </goals>
            <configuration>
                <application>${app.2.location}</application>
            </configuration>
        </execution>
    </executions>
</plugin>
----

== 跳过插件执行

如果为true，则`skip`会导致跳过插件执行。该属性适用于所有插件目标。最常见的情况是将其值设置为`skipTests`，以便在不希望测试运行时不需要准备测试基础架构。

[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <configuration>
        <muleVersion>3.8.5</muleVersion>
        <deploymentType>standalone</deploymentType>
        <skip>${skipTests}</skip>
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
        </execution>
    </executions>
</plugin>
----

==  Anypoint运行时管理器驻留TLS错误

尝试连接到 link:/anypoint-private-cloud/v/1.5/[Anypoint平台私有云版]安装中的运行时管理器的实例时，该插件会验证该服务器的证书。如果您尚未在信任库中安装服务器证书，则会发生SSL错误。为避免此问题，您可以以不安全的模式运行插件，这会跳过安全验证。您可以使用*armInsecure*标签或*arm.insecure*系统属性。

[WARNING]
启用不安全连接是非常危险的做法。除非您知道自己在做什么，并且您的On Premises安装已隔离在本地网络中，否则不应使用此功能。

请参阅下面的配置示例：

[source,xml,linenums]
----
<plugin>
    <groupId>org.mule.tools.maven</groupId>
    <artifactId>mule-maven-plugin</artifactId>
    <configuration>
        <deploymentType>arm</deploymentType>
        <muleVersion>${mule.version}</muleVersion>
        <username>${username}</username>
        <password>${password}</password>
        <applicationName>my-application</applicationName>
        <environment>Production</environment>
        <uri>https://anypoint.mulesoft.local</uri>
        <armInsecure>true</armInsecure>
    </configuration>
    <executions>
        <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals>
                <goal>deploy</goal>
            </goals>
        </execution>
    </executions>
</plugin>
----



== 完整参数列表

下表列出了您可以使用的所有可用参数。参数按照您可以使用它们的元素或配置进行分组：

*  <<Standalone>>
*  <<Cluster>>
*  <<Runtime Manager>>
*  <<CloudHub>>
*  <<Agent>>

=== 独立

[%header,cols="30a,70a"]
|===
| {参数{1}}说明
| `application`  |应用程序的文件路径。如果未指定，则使用Maven构建的结果作为默认值。
| `applicationName`  |用于部署的应用程序名称。如果未指定，则使用`artifactName`的值。
| `arguments`  |在命令行中传递给Mule运行时的参数：

*Syntax*：

[source]
----
<argument>-M-DmyArgument=myValue</argument>
----
| `community`  |如果设置为true，则下载社区运行时而不是Enterprise。
| `deploymentTimeout`  |部署超时（以毫秒为单位）。
| `libs`  |将外部JAR添加到`<MULE_HOME>/user/lib`。

*Example*：

[source]
----
<lib>${basedir}/activemq-core.jar</lib>
----
| `muleVersion` |下载并提取Mule版本。如果您指定`muleHome`，则不需要。
| `muleHome` |您的Mule安装路径，Mule发行版必须位于此位置。如果您使用`muleVersion`，则不需要。
|===

=== 群集

[%header,cols="30a,70a"]
|===
| {参数{1}}说明
| `application`  |应用程序的文件路径。如果未指定，则使用Maven构建的结果作为默认值。
| `applicationName`  |用于部署的应用程序名称。如果未指定，则使用`artifactName`的值。
| `arguments`  |在命令行中传递给Mule运行时的参数。

*Syntax*：

[source]
----
<argument>-M-DmyArgument=myValue</argument>
----
| `deploymentTimeout`  |部署超时（以毫秒为单位）。
| `libs`  |将外部JAR添加到`<MULE_HOME>/user/lib`

*Example*：

[source]
----
<lib>${basedir}/activemq-core.jar</lib>
----
| `muleVersion`  |下载和解压的Mule版本。
|===

=== 运行时管理器

[%header,cols="30a,70a"]
|===
| {参数{1}}说明
| `application`  |应用程序的文件路径。如果未指定，则使用Maven构建的结果作为默认值。
| `applicationName`  |用于部署的应用程序名称。如果未指定，则使用`artifactName`的值。
| `businessGroup`  |指定要部署到的业务组的路径（如果有）。默认是主组织。

*Example*：

[source]
----
<businessGroup>master\subOrg1\subOrg2</businessGroup>
----
| `environment`  |要部署到的Anypoint环境。
| `muleVersion`  |下载并提取Mule版本。 `muleVersion`参数采用您在CloudHub的“运行时版本”中看到的确切值。

*Example*：

[source]
----
<muleVersion>API Gateway 2.2.0</muleVersion>
----
| `username`  | Anypoint平台用户名。
| `password`  | Anypoint平台密码。
| `target`  |目标服务器名称。
| `targetType`  |目标服务器类型，指定为*server*，*serverGroup*，*cluster*之一。
| `uri`  |默认情况下为`anypoint.mulesoft.com`的任意平台URI。
|===

===  CloudHub

[%header,cols="30a,70a"]
|===
| {参数{1}}说明
| `application` |应用程序的文件路径。如果未指定，则使用Maven构建的结果作为默认值。
| `applicationName`  |用于部署的应用程序名称。如果未指定，则使用`artifactName`的值。
| `businessGroup`  |指定您部署到的业务组的路径（如果有）。默认是主组织。

*Example*：

[source]
----
<businessGroup>master\subOrg1\subOrg2</businessGroup>
----
| `environment`  |要部署到的Anypoint环境。
| `muleVersion`  |下载并提取Mule版本。 `muleVersion`参数采用您在CloudHub的“运行时版本”中看到的确切值。

*Example*：

[source]
----
<muleVersion>API Gateway 2.2.0</muleVersion>
----
| `username`  | Anypoint平台用户名。
| `password`  | Anypoint平台密码。
| `properties`  |配置Cloudhub属性。 `<properties>`中的每个嵌套元素都被视为属性名称，其值是其文本。

*Example*：

[source,xml,linenums]
----
<properties>
   <key1>value1</key1>
   <anotherKey>this is a value</anotherKey>
</properties>
----

这会在运行时管理器控制台中创建两个属性：`key1=value`和`anotherKey=this is a value`。请注意，您指定的属性在运行时管理器中覆盖此应用程序的现有属性。

[NOTE]
--
这里定义的属性将覆盖应用程序的`mule-app.properties`文件中设置的属性。 +
如果您选择在此添加媒体资源，请务必添加您在`mule-app.properties`中声明的媒体资源。
--

| `region`  |您希望创建工人的地区。有关可接受值的列表，请参阅 link:http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html#concepts-available-regions[可用区域]。
| `uri`  |默认情况下为`anypoint.mulesoft.com`的任意点平台URI。
| `workerType`  |工作人员的大小被指定为以下之一：*Micro*（0.1 vCores），*Small*（0.2 vCores），{{3 }}（1 vCores），*Large*（2 vCores），*xLarge*（4 vCores）。请注意，该值区分大小写。

*Example*：

[source]
----
<workerType>Small</workerType>
----
| `workers`  |要创建的工作人员数量。

|===

=== 代理

[%header,cols="30a,70a"]
|===
| {参数{1}}说明
| `application`  |应用程序的文件路径。如果未指定，则使用Maven构建的结果作为默认值。
| `applicationName`  |用于部署的应用程序名称。如果未指定，则使用`artifactName`的值。
| `uri` |代理正在侦听的本地URI。
|===

=== 跳过Maven部署

执行部署阶段也会触发maven-deploy-plugin的默认部署目标。如果您不是作为构建的一部分部署到Maven存储库，则可以使用以下方法阻止插件执行：

[source,xml,linenums]
----
<plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-deploy-plugin</artifactId>
  <configuration>
    <skip>true</skip>
  </configuration>
</plugin>
----
